--- a/www/css/style.css
+++ b/www/css/style.css
@@ -32,6 +32,12 @@ hr {
 
 .item h3 {
     font-size: 24px;
+    text-transform: uppercase;
+}
+
+.item h4 {
+    font-size: 18px;
+    text-transform: uppercase;
 }
 
 .left {
@@ -105,11 +111,15 @@ input[type="number"] {
 }
 
 .item-input {
-    padding: 10px;
+    padding: 0;
 }
 
 .item-input-wrapper input {
     border: none;
+}
+
+.item-input textarea {
+    padding: 5px;
 }
 
 .site-header {
@@ -148,12 +158,15 @@ input[type="number"] {
 
 .card {
     box-shadow: none;
+    margin-bottom: 20px;
+    padding: 15px;
 }
 
 .card-title {
     font-size: 1.2em;
     font-weight: 600;
-    padding-top: 10px;
+    border-bottom: 1px solid#e1e1e1;
+    padding-bottom: 5px;
 }
 
 .component-title {
@@ -176,8 +189,46 @@ input[type="number"] {
     padding: 10px;
 }
 
+.marketplace-img {
+    max-height: 128px;
+    border-radius: 0;
+    padding: 5px;
+}
+
+
+/* tables */
+
+table {
+    width: 100%;
+    border: 1px solid silver;
+    padding: 5px;
+    margin: 20px 0 0 0;
+}
+
+th {
+    background-color: #e1e1e1;
+    border-bottom: 1px solid #999;
+    font-weight: 400;
+    text-transform: uppercase;
+    font-size: 12px;
+}
+
+td {
+    padding: 5px;
+    color: #000;
+    border-bottom: 1px solid #e1e1e1;
+}
+
 
 /* mods and break points */
+
+.align-center {
+    text-align: center;
+}
+
+.push-right-16 {
+    margin-left: 16px;
+}
 
 @media (max-width: 567px) {
     h1 {
