--- a/www/templates/create-profile.html
+++ b/www/templates/create-profile.html
@@ -1,54 +1,55 @@
 <ion-view>
-    
-  <ion-content>
-    <div  ng-if="state.loggedIn == !true">
-    <div class="row">
-        <div class="col"><h2>Create a Profile</h2></div>
-     </div>  
-     <div class="row">
-        <div class="col col-50"> 
-        
-        <form ng-submit="createProfile(profile)">
-                <fieldset>
-                    <legend>User Information</legend>
-                    <div class="list">
-                        <label class="item item-input">
+    <ion-content overflow-scroll="true">
+        <div ng-if="state.loggedIn == !true">
+            <div class="row">
+                <div class="col">
+                    <h2>Create a Profile</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col col-50">
+
+                    <form ng-submit="createProfile(profile)">
+                        <fieldset>
+                            <legend>User Information</legend>
+                            <div class="list">
+                                <label class="item item-input item-stacked-label border-none">
                         <span class="input-label">Username</span>
                         <input type="text" ng-model="profile.username">
                         </label>
-                        <label class="item item-input">
+                                <label class="item item-input item-stacked-label border-none">
                         <span class="input-label">Password</span>
                         <input type="password" ng-model="profile.password">
                         </label>
-                        <label class="item item-input">
+                                <label class="item item-input item-stacked-label border-none">
                         <span class="input-label">Profile Type</span>
                         <select> 
                             <option>Manufacturer</option>
                             <option>Supplier</option>
                         </select>
                         </label>
-                    </div>
-                </fieldset>
-                <fieldset>
-                    <legend>Company Information</legend>
-                        <div class="list">
-                            <label class="item item-input">
+                            </div>
+                        </fieldset>
+                        <fieldset>
+                            <legend>Company Information</legend>
+                            <div class="list">
+                                <label class="item item-input item-stacked-label border-none">
                             <span class="input-label">Comnpany Name</span>
                             <input type="text" ng-model="profile.companyName">
                             </label>
-                            <label class="item item-input">
+                                <label class="item item-input item-stacked-label border-none">
                             <span class="input-label">Address</span>
                             <input type="text" ng-model="profile.address1">
                             </label>
-                            <label class="item item-input">
+                                <label class="item item-input item-stacked-label border-none">
                             <span class="input-label">Address 2</span>
                             <input type="text" ng-model="profile.address2">
                             </label>
-                            <label class="item item-input">
+                                <label class="item item-input item-stacked-label border-none">
                             <span class="input-label">City</span>
                             <input type="text" ng-model="profile.city">
                             </label>
-                            <label class="item item-input">
+                                <label class="item item-input item-stacked-label border-none">
                             <span class="input-label">State</span>
                             <select ng-model="profile.state">
                             <option>Alabama</option>
@@ -56,44 +57,39 @@
                             <option>...</option>
                             </select>
                             </label>
-                            <label class="item item-input">
+                                <label class="item item-input item-stacked-label border-none">
                             <span class="input-label">ZIP</span>
-                            <input type="text" ng-model="profile.zip">
+                            <input type="number" ng-model="profile.zip">
                             </label>
-                        </div>
-                </fieldset>
-                <fieldset>
-                    <legend>Contact Information</legend>
-                        <div class="list">
-                            <label class="item item-input">
+                            </div>
+                        </fieldset>
+                        <fieldset>
+                            <legend>Contact Information</legend>
+                            <div class="list">
+                                <label class="item item-input item-stacked-label border-none">
                             <span class="input-label">First Name</span>
                             <input type="text">
                             </label>
-                            <label class="item item-input">
+                                <label class="item item-input item-stacked-label border-none">
                             <span class="input-label">Last Name</span>
                             <input type="text">
                             </label>
-                            <label class="item item-input">
+                                <label class="item item-input item-stacked-label border-none">
                             <span class="input-label">Phone</span>
-                            <input type="text">
+                            <input type="number">
                             </label>
-                        </div>
-                </fieldset>
-                <fieldset>
-                    <div class="list">
-                        <label>
+                            </div>
+                        </fieldset>
+                        <fieldset>
+                            <div class="list">
+                                <label>
                         <button class="button button-block button-positive" type="submit">Create Profile</button>
                         </label>
-                    </div>
-                </fieldset><
-
-                    <div class="list">
-                        
-                    </div>
-                <br />
-             </div>
-            </form>
-         </div>
+                            </div>
+                        </fieldset>
+                </div>
+                </form>
+            </div>
         </div>
         <div ng-if="state.loggedIn == true">
             <div class="row">
@@ -103,8 +99,5 @@
                 </div>
             </div>
         </div>
-  
-  
-  </ion-content>
-
+    </ion-content>
 </ion-view>
