--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,79 +1,102 @@
-<ion-side-menus enable-menu-with-back-views="false">
-  <ion-side-menu-content>
-    <ion-nav-bar class="bar-stable">
-      <ion-nav-back-button>
-      </ion-nav-back-button>
+<ion-side-menus enable-menu-with-back-views="true">
+    <ion-side-menu-content>
+        <ion-nav-bar class="bar-stable">
+            <ion-nav-buttons side="left" class="nav">
+                <button class="button button-icon button-clear ion-navicon" menu-toggle="left"></button>
+            </ion-nav-buttons>
+            <ion-nav-buttons side="right">
+                <button class="button button-dark button-clear" ng-click="profileLink()" data-ng-controller="ProfileCtrl">
+                    <span ng-if="!state.loggedIn == true"><i class="icon ion-person"></i>{{ userName }}</span> 
+                    <span ng-if="state.loggedIn == true"><img ng-src={{profile.face}} class="user-avatar-sm" /></span> 
+                </button>
+            </ion-nav-buttons>
+            <!--<ion-nav-back-button hide-back-button="{{options.hideBackButton}}"></ion-nav-back-button>-->
+        </ion-nav-bar>
+        <ion-nav-view name="menuContent"></ion-nav-view>
+    </ion-side-menu-content>
 
-      <ion-nav-buttons side="left" class="nav">
-        <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
-        </button>
-        
-      </ion-nav-buttons>
-      <ion-nav-buttons side="right">
-        <button class="button button-dark button-clear" ng-click="profileLink()" data-ng-controller="ProfileCtrl">
-          <span ng-if="!state.loggedIn == true"><i class="icon ion-person"></i>{{ userName }}</span> 
-          <span ng-if="state.loggedIn == true"><img ng-src={{profile.face}} class="user-avatar-sm" /> {{ userName }}</span> 
-          
-        </button>
-    </ion-nav-bar>
-    <ion-nav-view name="menuContent"></ion-nav-view>
-  </ion-side-menu-content>
-
-  <ion-side-menu side="left">
-    <ion-header-bar class="left-nav"></ion-header-bar>
-    <ion-content class="left-nav">
-      <!-- logged out menu -->
-      <ion-list ng-class="left-nav" ng-show="!state.loggedIn == true"> 
-        <ion-item class="left-nav-item" menu-close>
-          <a href="#/"><i class="fa fa-home"></i> Home</a>
-        </ion-item>
-        <ion-item class="left-nav-item" menu-close ng-click="login()" ng-show="!state.loggedIn == true">
-          <i class="fa fa-user-circle"></i> Login
-        </ion-item>
-        <ion-item class="left-nav-item" menu-close>
-          <a href="#/app/search"><i class="fa fa-search-plus"></i> Browse</a>
-        </ion-item>
-        <ion-item class="left-nav-item" menu-close>
-          <a href="#/app/create-profile"><i class="fa fa-user-plus"></i> Create a Profile</a>
-        </ion-item>
-      </ion-list>
-      <!-- logged in menu -->
-      <ion-list ng-show="state.loggedIn == true"> 
-        <ion-item class="left-nav-item" menu-close>
-        <a href="#/app/user-home"><i class="fa fa-home"></i> Home</a>
-        </ion-item>
-        <ion-item class="left-nav-item" menu-close ng-click="logout()">
-           <i class="fa fa-unlock"></i> Logout
-        </ion-item>
-        <ion-item class="left-nav-item" menu-close>
-          <a href="#/app/search"><i class="fa fa-search-plus"></i> Browse</a>
-        </ion-item>
-        <ion-item class="left-nav-item" menu-close>
-           <a href="#/app/create-proposal"><i class="fa fa-plus-circle"></i> Create a Proposal</a>
-        </ion-item>
-        <ion-item class="left-nav-item" menu-close>
-           <a href="#/app/profile"><i class="fa fa-user-plus"></i> My Profile
-           <span class="badge badge-assertive">4</span></a>
-          </ion-item>
-          <ion-item class="left-nav-item" data-ng-if="((state.loggedIn == true) && (state.admin == true))">
-           <a menu-close href="#/app/admin"><i class="fa fa-gears"></i> Admin Tools</a>
-          </ion-item>
-      </ion-list>
-      <ion-list>
-         <ion-item class="left-nav-item" menu-close>
-           <a href="#/app/about"><i class="fa fa-info-circle"></i> About MSH</a>
-        </ion-item>
-        <ion-item class="left-nav-item" >
-          Language: 
-          <select>
+    <ion-side-menu side="left">
+        <ion-header-bar class="left-nav"></ion-header-bar>
+        <ion-content class="left-nav">
+            <!-- logged out menu -->
+            <ion-list ng-class="left-nav" ng-show="!state.loggedIn == true">
+                <ion-item class="left-nav-item" menu-close>
+                    <a href="#/"><i class="fa fa-home"></i> Home</a>
+                </ion-item>
+                <ion-item class="left-nav-item" menu-close ng-click="login()" ng-show="!state.loggedIn == true">
+                    <i class="fa fa-user-circle"></i> Login
+                </ion-item>
+                <ion-item class="left-nav-item" menu-close>
+                    <a href="#/app/search"><i class="fa fa-search-plus"></i> Browse</a>
+                </ion-item>
+                <ion-item class="left-nav-item" menu-close>
+                    <a href="#/app/create-profile"><i class="fa fa-user-plus"></i> Create a Profile</a>
+                </ion-item>
+            </ion-list>
+            <!-- logged in menu not admin -->
+            <ion-list ng-show="((state.loggedIn == true) && (state.admin != true))">
+                <ion-item class="left-nav-item" menu-close>
+                    <a href="#/app/user-home"><i class="fa fa-home"></i> Home 
+           <span class="badge badge-assertive" data-ng-controller="ProposalsCtrl">{{proposals.length}}</span></a>
+                </ion-item>
+                <ion-item class="left-nav-item" menu-close ng-click="logout()">
+                    <i class="fa fa-unlock"></i> Logout
+                </ion-item>
+                <!--<ion-item class="left-nav-item" menu-close>
+                    <a href="#/app/search"><i class="fa fa-search-plus"></i> Browse</a>
+                </ion-item>-->
+                <ion-item class="left-nav-item" menu-close>
+                    <a href="#/app/marketplace"><i class="fa fa-shopping-cart"></i> Marketplace</a>
+                </ion-item>
+                <ion-item class="left-nav-item" menu-close>
+                    <a href="#/app/create-proposal"><i class="fa fa-plus-circle"></i> Create a Proposal</a>
+                </ion-item>
+                <ion-item class="left-nav-item" menu-close>
+                    <a href="#/app/profile"><i class="fa fa-user-plus"></i> My Profile</a>
+                </ion-item>
+                <ion-item class="left-nav-item" data-ng-if="((state.loggedIn == true) && (state.admin == true))">
+                    <a menu-close href="#/app/admin"><i class="fa fa-gears"></i> Admin Tools</a>
+                </ion-item>
+            </ion-list>
+            <!-- logged in admin menu -->
+            <ion-list ng-show="((state.loggedIn == true) && (state.admin == true))">
+                <ion-item class="left-nav-item" menu-close>
+                    <a href="#/app/user-home"><i class="fa fa-home"></i> Home </a>
+                </ion-item>
+                <ion-item class="left-nav-item" menu-close ng-click="logout()">
+                    <i class="fa fa-unlock"></i> Logout
+                </ion-item>
+                <!--<ion-item class="left-nav-item" menu-close>
+                    <a href="#/app/search"><i class="fa fa-search-plus"></i> Browse</a>
+                </ion-item>-->
+                <ion-item class="left-nav-item" menu-close>
+                    <a href="#/app/account-profiles"><i class="fa fa-users"></i> Account Profiles</a>
+                </ion-item>
+                <ion-item class="left-nav-item" menu-close>
+                    <a href="#/app/material-database"><i class="fa fa-database"></i> Material Database</a>
+                </ion-item>
+                <ion-item class="left-nav-item" menu-close>
+                    <a href="#/app/quotes"><i class="fa fa-file-text"></i> Quotes</a>
+                </ion-item>
+                <ion-item class="left-nav-item" data-ng-if="((state.loggedIn == true) && (state.admin == true))">
+                    <a menu-close href="#/app/reporting"><i class="fa fa-bar-chart"></i> Reporting</a>
+                </ion-item>
+            </ion-list>
+            <ion-list>
+                <ion-item class="left-nav-item" menu-close>
+                    <a href="#/app/about"><i class="fa fa-info-circle"></i> About MSH</a>
+                </ion-item>
+                <ion-item class="left-nav-item">
+                    Language:
+                    <select>
             <option selected>English</option>
             <option>Spanish</option>
             <option>French</option>
             <option>German</option>
             <option>Italian</option>
           </select>
-        </ion-item>
-      </ion-list>
-    </ion-content>
-  </ion-side-menu>
+                </ion-item>
+            </ion-list>
+        </ion-content>
+    </ion-side-menu>
 </ion-side-menus>
