--- a/www/css/style.css
+++ b/www/css/style.css
@@ -153,7 +153,7 @@ input[type="number"] {
 }
 
 .has-footer {
-    bottom: 90px;
+    bottom: 115px;
 }
 
 .card {
@@ -173,6 +173,7 @@ input[type="number"] {
     font-size: 1.2em;
     font-weight: 600;
     text-transform: uppercase;
+    padding-left: 0;
 }
 
 .text-small {
@@ -193,6 +194,13 @@ input[type="number"] {
     max-height: 128px;
     border-radius: 0;
     padding: 5px;
+}
+
+
+/* my capabilities */
+
+.capability-item {
+    padding: 4px;
 }
 
 
